--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>1010</title>
     <link rel="stylesheet" type="text/css" href="./c/reset.css">
-    <link rel="stylesheet" type="text/css" href="./c/index.css">
+    <link rel="stylesheet" type="text/css" href="./c/index.css?1.0">
     <script src="./j/viewAdaptor.js"></script>
   </head> 
   <body>
