--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>1010</title>
     <link rel="stylesheet" type="text/css" href="./c/reset.css">
-    <link rel="stylesheet" type="text/css" href="./c/index.css?1.0">
+    <link rel="stylesheet" type="text/css" href="./c/index.css?1.5">
     <script src="./j/viewAdaptor.js"></script>
   </head> 
   <body>
@@ -34,6 +34,6 @@
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="./j/type.js"></script>
-    <script src="./j/index.js"></script>
+    <script src="./j/index.js?1.5"></script>
   </body>
 </html>
